--- a/microservice-arch/yml/2048.yml
+++ b/microservice-arch/yml/2048.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: g2048
-        image: tejubagalad/2048:latest	
+        image: tejubagalad/g2048:latest	
         ports:
         - containerPort: 80
 ---
