--- a/microservice-arch/yml/app.yml
+++ b/microservice-arch/yml/app.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: gameapp
-        image: tejubagalad/app:latest
+        image: tejubagalad/gameapp:latest
         ports:
         - containerPort: 80
 ---
@@ -24,7 +24,7 @@ metadata:
   name: gameapp-service
 spec:
   selector:
-    app: gamehub
+    app: gameapp
   type: NodePort
   ports:
     - port: 80
